src/App.css
/* ... */
div:nth-child(4) .nav-link::before {
  background-color: var(--nav-mars);
}

div:nth-child(5) .nav-link::before {
  background-color: var(--nav-jupiter);
}

div:nth-child(6) .nav-link::before {
  background-color: var(--nav-saturn);
}

div:nth-child(7) .nav-link::before {
  background-color: var(--nav-uranus);
}

div:nth-child(8) .nav-link::before {
  background-color: var(--nav-neptune);
}

.nav-link::after {
  content: "";
  width: 0.6rem;
  height: 0.8rem;
  background-image: url("../public/assets/icon-chevron.svg");
  position: absolute;
  right: 0;
  top: 2.8rem;
}

/* Main */

.page-title {
  font-family: var(--font-secondary);
  font-weight: 500;
  font-size: 4rem;
  line-height: 5.2rem;
  text-align: center;
  text-transform: uppercase;
}

.image-wrapper {
  width: 100%;
  height: 30.4rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.main-image {
  width: min(95%, var(--image-width-mobile));
}

.content-type-wrapper {
  display: flex;
  justify-content: space-between;
  border-bottom: 1px solid var(--transparent-white2);
  padding: 2rem 2.4rem;
}

.content-type {
  font-weight: 700;
  font-size: 0.9rem;
  line-height: 1rem;
  text-align: center;
  letter-spacing: 1.92857px;
  text-transform: uppercase;
  opacity: 0.5;
  position: relative;
}

.content-type.active-content::after {
  content: "";
  height: 0.4rem;
  width: 100%;
  background-color: var(--theme-color);
  position: absolute;
  bottom: -2.3rem;
  left: 0;
  right: 0;
}

.text-content {
  width: min(87.2%, 32.7rem);
  margin: 0 auto;
}

.content {
  font-size: 1.1rem;
  line-height: 2.2rem;
  text-align: center;
  margin: 1.6rem auto 3.2rem;
}

.source {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.4rem;
  font-size: 1.2rem;
  line-height: 2.5rem;
  opacity: 0.5;
}

.source a {
  color: var(--white);
  font-weight: 700;
}

.stats {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
  margin: 2.8rem auto 4.7rem;
  width: min(87.2%, 32.7rem);
}

.stats-wrapper {
  border: 1px solid var(--transparent-white2);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.9rem 2.4rem 1.3rem;
}

.stats-description {
  font-weight: 700;
  font-size: 0.8rem;
  line-height: 1.6rem;
  letter-spacing: 0.727273px;
  text-transform: uppercase;
  opacity: 0.5;
}

.stats-value {
  font-family: var(--font-secondary);
  font-weight: 500;
  font-size: 2rem;
  line-height: 2.6rem;
  letter-spacing: -0.75px;
  text-transform: uppercase;
}

/* Media Queries */
@media screen and (max-width: 270px) {
  .content-type-wrapper {
    flex-direction: column;
    align-items: center;
    gap: 2rem;
  }

  .stats-wrapper {
    flex-direction: column;
    justify-content: center;
    gap: 0.5rem;
  }
}

@media screen and (min-width: 710px) {
  /* Header */
  .header {
    flex-direction: column;
    justify-content: center;
    padding: 3.2rem 5.2rem 2.7rem 5.1rem;
    gap: 3.9rem;
  }
  .navigation-button {
    display: none;
  }

  .navigation {
    background-color: transparent;
    position: static;
    padding: 0;
    transform: translateX(0);
    height: auto;
    width: auto;
  }

  .navigation form {
    display: flex;
    gap: 3.3rem;
  }

  .nav-link {
    padding: 0;
    border: none;
    font-size: 1.1rem;
    letter-spacing: 1px;
  }

  .nav-link::before {
    content: none;
  }

  .nav-link::after {
    content: none;
  }
  /* Main */

  .main {
    display: grid;
    grid-template-columns: repeat(2, auto);
    margin-inline: auto;
    width: 68.9rem;
    column-gap: 6.9rem;
  }

  .image-wrapper {
    height: 48.8rem;
    grid-column: span 2;
    grid-row: 1 / 2;
  }

  .text-content {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
    width: 100%;
  }

  .content-type-wrapper {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    width: 100%;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    border: none;
    padding: 0;
    gap: 1.6rem;
    height: 25.3rem;
  }

  .main-image {
    width: var(--image-width-tablet);
  }

  .page-title {
    font-size: 4.8rem;
    line-height: 6.2rem;
    text-align: left;
  }

  .content-type {
    display: block;
    font-size: 0.9rem;
    line-height: 2.5rem;
    letter-spacing: 1.92857px;
    opacity: 1;
    width: 28.1rem;
    text-align: left;
    padding: 0.8rem 0 0.7rem 5rem;
    border: 1px solid var(--transparent-white2);
  }

  .content-type.active-content::after {
    content: none;
  }

  .content-type.active-content {
    background-color: var(--theme-color);
    border-color: var(--theme-color);
  }

  div:nth-child(1) .content-type::before {
    content: "01";
    left: 2rem;
    opacity: 0.5;
    position: absolute;
  }

  div:nth-child(2) .content-type::before {
    content: "02";
  }

  div:nth-child(3) .content-type::before {
    content: "03";
  }

  .content {
    text-align: left;
    margin: 2.4rem auto 3.2rem;
  }

  .source {
    justify-content: flex-start;
  }

  .stats {
    grid-column: 1 / 3;
    grid-row: 3 / 4;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 1.1rem;
    margin: 2.7rem 0 3.6rem;
    width: 100%;
  }

  .stats-wrapper {
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 0.6rem;
    padding: 1.6rem 1.5rem 1.9rem;
  }

  .stats-value {
    font-size: 2.4rem;
    line-height: 3.1rem;
    letter-spacing: -0.9px;
  }
}
/* ... */

